Table created, overflow-x fixed

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,27 +2,33 @@ html, body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: #333333;
+    overflow: auto;
+    overflow-x: hidden;
+}
+body {
+    width: 100%;
+    height: 100%;
 }
 
 .dialogue_header_image-cropper {
     position: absolute;
     width: 120px;
     height: 120px;
-    position: relative;
     overflow: hidden;
     border-radius: 50%;
     margin-left: 20px;
-    margin-top: 15px;
+    margin-top: -45px;
 }
 
 .dialogue_header_avatar {
     display: inline-block;
+    position: absolute;
     margin: 0 auto;
     height: 100%;
     width: auto;
     margin-right: 20px;
     margin-left: -20px;
-    margin-top: 20px;
+    margin-top: 22px;
     -moz-transform: scale(1.8);
     -webkit-transform: scale(1.8);
     transform: scale(1.8);
@@ -38,21 +44,23 @@ html, body {
 .dialogue {
     max-width: 720px;
     min-width: 360px;
-    width: 490px;
+    width: 720px;
     height: 500px;
     background-color: white;
 }
 .dialogue_header {
     width: 100%;
-    margin: 0;
+    height: auto;
+    margin-top: 15px;
     display: absolute;
 }
 
 .dialogue_header_name{
     margin-left: 146px;
     margin-right: 135px;
-    margin-top: -12px;
-    position: absolute;
+    margin-bottom: 10px;
+    margin-top: 25px;
+    /* position: absolute; */
     width: 100%;
 }
 .name {
@@ -60,7 +68,6 @@ html, body {
     font-weight: bold;
     margin-bottom: 5px;
     color: #333333;
-    
 }
 .position {
     font-size: 10pt;
@@ -69,25 +76,59 @@ html, body {
     color: #808080;
 }
 .dialogue_header_box{
-    max-width: 720p;;
-    position: absolute;
-    display: inline-block;
-    max-width: 365px;
+    width: auto;
+    /* position: absolute; */
+    /* display: block; */
     font-size: 14px;
     background-color: #fffbc8;
     border-radius: 4px;
-    margin-left: 100px;
-    margin-right: 34px;
-    margin-top: 50px;
-
+    margin-left: 60px;
+    margin-right: 25px;
+    margin-top: -5px;
     -webkit-box-shadow: inset 0px 0px 0px 1px rgba(206,202,191,1);
     -moz-box-shadow: inset 0px 0px 0px 1px rgba(206,202,191,1);
     box-shadow: inset 0px 0px 0px 1px rgba(206,202,191,1);
 }
 .dialogue_header_box_text {
-    margin-top: 12px;
+    padding-top: 12px;
     margin-bottom: 0;
-    padding-left: 46px;
+    padding-left: 86px;
     padding-right: 14px;
     padding-bottom: 9px;
 }
+.table_container{
+    margin-top: 13px;
+    margin-right: 26px;
+    padding-left: 145px;
+}
+table {
+    display: table;
+    width: 100%;
+    float: right;
+}
+th {
+    color: #7d7d7d;
+    font-size: 14px;
+    font-weight: 400;
+
+    padding-bottom: 12px;
+}
+td {
+    padding-right: 34px;
+}
+/* table, th, td {
+    border: 1px solid black;
+    
+  } */
+  .table_header, th {
+    border: 1px solid black;
+  }
+
+  table, th, td {
+    /* border: 1px solid black; */
+    border-collapse: collapse;
+  }
+  .table_header{
+    border-bottom: 1px solid black;
+    border-collapse: collapse;
+  }
